--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ footer { width: 100%; display: flex; justify-content: center; }
     justify-content: center;
     font-size: 12px;
     z-index: -1;
+    overflow: hidden;
 }
 .words div { display: flex; justify-content: space-evenly; }
 .words div p { padding: 38px; }
@@ -156,6 +157,9 @@ footer { width: 100%; display: flex; justify-content: center; }
 .projectCon {
     width: 100%;
     background-color: #fff;
+    position: relative;
+    z-index: 1;
+    scroll-snap-align: none;
 }
 
 .projectList { 
