--- a/css/projects.css
+++ b/css/projects.css
@@ -10,7 +10,7 @@ img { user-select: none; }
 
 .projectHero {
     width: 100%;
-    height: 850px;
+    height: 100%;
     text-align: center;
     position: fixed;
     z-index: -1;
@@ -32,10 +32,7 @@ img { user-select: none; }
 #pageTitle { color: white; font-size: 36px; margin: 20px; }
 #pageSubtitle { color: white; font-size: 20px; margin: 20px; }
 
-footer { width: 100%; display: flex; justify-content: center; }
-
-#icon-up { width: 20px; margin: 25px; cursor: pointer; filter: opacity(0.5); transition: 0.3s; }
-#icon-up:hover { filter: opacity(1); transform: scale(1.2); }
+footer { width: 100%; display: flex; justify-content: center; cursor: pointer;}
 
 .allProjectsCon {
     width: 100%;
